# ncsbe

./: .gitignore  LICENSE  README.md  extract.py  patch.py  pyproject.toml
src/ncsbe/: __init__.py  abev.py  county_lookup.csv  hist.py  resu.py  util.py  vofi.py
src/ncsbe/columns/: abev.txt  hist.txt  resu.txt  vofi.txt
